infra/k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: regmicmahesh/microsvc-ticketing-auth
          imagePullPolicy: Never

---

apiVersion: v1
kind: Service
metadata:
  name: auth-svc
spec:
  selector:
    app: auth
  ports:
    - name: auth
      port: 3000
      protocol: TCP
      targetPort: 3000
