infra/k8s/mongo.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth-mongo-depl
spec:
  selector:
    matchLabels:
      app: auth-mongo

  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongdo
          image: mongo

---
apiVersion: v1
kind: Service

metadata:
  name: auth-mongo-svc
spec:
  selector:
    app: auth-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
